2012-11-08  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* elf/elf.h: Update comment before AArch64 relocations.

2012-11-07  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/sparc64/__start_context.S: New file.
	* sysdeps/unix/sysv/linux/sparc/sparc64/makecontext.c
	(__start_context): Declare.
	(__makecontext_ret): Delete.
	(__makecontext): Hook up __start_context instead of
	__makecontext_ret.
	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile
	(sysdep_routines): Add __start_context when in stdlib.

2012-11-07  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/x86/Makefile ($(objpfx)tst-xmmymm.out): Pass $(NM),
	$(OBJDUMP) and $(READELF) to tst-xmmymm.sh.
	* sysdeps/x86/tst-xmmymm.sh (NM): New variable.  Use it instead of
	hardcoded "nm".
	(OBJDUMP): New variable.  Use it instead of hardcoded "objdump".
	(READELF): New variable.  Use it instead of hardcoded "readelf".

2012-11-07  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/Makefile ($(objpfx)tst-xmmymm.out): Moved to ...
	* sysdeps/x86/Makefile: Here.
	* sysdeps/x86_64/tst-xmmymm.sh: Renamed to ...
	* sysdeps/x86/tst-xmmymm.sh: This.

2012-11-07  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/pthread.h-data [XPG3 || XPG4]: Disable all
	expectations.
	[UNIX98] (pthread_barrier_t): Do not expect.
	[UNIX98] (pthread_barrierattr_t): Likewise.
	[UNIX98] (pthread_spinlock_t): Likewise.
	[UNIX98] (pthread_barrier_destroy): Likewise.
	[UNIX98] (pthread_barrier_init): Likewise.
	[UNIX98] (pthread_barrier_wait): Likewise.
	[UNIX98] (pthread_barrierattr_destroy): Likewise.
	[UNIX98] (pthread_barrierattr_getpshared): Likewise.
	[UNIX98] (pthread_barrierattr_init): Likewise.
	[UNIX98] (pthread_barrierattr_setpshared): Likewise.
	[UNIX98] (pthread_getcpuclockid): Likewise.
	[UNIX98] (pthread_mutex_timedlock): Likewise.
	[UNIX98] (pthread_rwlock_timedrdlock): Likewise.
	[UNIX98] (pthread_rwlock_timedwrlock): Likewise.
	[UNIX98] (pthread_sigmask): Likewise.