@@ -33,7 +33,9 @@
 
 /* Hardware capablity bit numbers are derived directly from the
    facility indications as stored by the "store facility list" (STFL)
-   instruction.  */
+   instruction.
+   highgprs is an alien in that list.  It describes a *kernel*
+   capability.  */
 
 enum
 {
@@ -47,6 +49,7 @@ enum
   HWCAP_S390_HPAGE = 1 << 7,
   HWCAP_S390_ETF3EH = 1 << 8,
   HWCAP_S390_HIGH_GPRS = 1 << 9,
+  HWCAP_S390_TE = 1 << 10,
 };
 
 #define HWCAP_IMPORTANT (HWCAP_S390_ZARCH | HWCAP_S390_LDISP \
